--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with: 
+          submodules: true
       - name: Hugo Actions
         uses: srt32/hugo-action@v0.0.3
       - uses: FirebaseExtended/action-hosting-deploy@v0
